--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "tree-sitter-latte"
 description = "latte grammar for the tree-sitter parsing library"
-version = "0.1.0"
+version = "0.1.1"
 keywords = ["tree-sitter", "grammar", "latte"]
 categories = ["parsing", "text-editors"]
 repository = "https://github.com/daun/tree-sitter-latte"
@@ -9,12 +9,7 @@ edition = "2024"
 license = "MIT"
 
 build = "bindings/rust/build.rs"
-include = [
-  "bindings/rust/*",
-  "grammar.js",
-  "queries/*",
-  "src/*",
-]
+include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]
 
 [lib]
 path = "bindings/rust/lib.rs"
